<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity Main -->
    <string name="app_name">Niuxes</string>
    <string name="botao_pecas">Peças</string>
    <string name="botao_jogar">Jogar</string>
    <string name="botao_configuracoes">Configurações</string>
    <string name="botao_sobre">Sobre</string>
    <string name="offline">Offline</string>
    <string name="bluetooth">Bluetooth</string>

    <!-- Activity Sobre -->
    <string name="title_activity_sobre">Sobre</string>

    <!-- Activity Configurações -->
    <string name="title_activity_configuracoes">Configurações</string>

    <!-- Activity Peças -->
    <string name="title_activity_pecas">Peças</string>
    <string name="escolha_seus_guerreiros">Escolha seus guerreiros!</string>
    <string name="salvar_pecas">Salvar peças</string>
    <string name="mudar_jogador">Mudar jogador</string>
    <string name="nome_soldado">Soldado</string>
    <string name="nome_mago">Mago</string>
    <string name="nome_rei">Rei</string>
    <string name="nome_arqueiro">Arqueiro</string>
    <string name="radio_esquerda">Esquerda</string>
    <string name="radio_meio">Meio</string>
    <string name="radio_direita">Direita</string>
    <string name="pecas_salvas">Peças salvas</string>
    <string name="jogador1">Jogador 1</string>
    <string name="jogador2">Jogador 2</string>

    <!-- Activity Jogo -->
    <string name="title_activity_jogo">Jogo</string>
    <string name="novo_jogo">Novo jogo</string>
    <string name="dialog_sair">Ao sair o seu jogo atual será perdido, tem certeza disso?</string>
	<string name="sim">Sim</string>
	<string name="nao">Não</string>
	<string name="vitoria">Vitória!</string>
	<string name="derrota">Derrota</string>
    
    <!-- Activity Jogo (Descrição para cegos) -->
    <string name="turno_seu">Seu turno</string>
    <string name="turno_oponente">Turno do oponente</string>
    <string name="quadrado00">1x1</string>
    <string name="quadrado01">1x2</string>
    <string name="quadrado02">1x3</string>
    <string name="quadrado03">1x4</string>
    <string name="quadrado04">1x5</string>
    <string name="quadrado05">1x6</string>
    <string name="quadrado06">1x7</string>
    <string name="quadrado10">2x1</string>
    <string name="quadrado11">2x2</string>
    <string name="quadrado12">2x3</string>
    <string name="quadrado13">2x4</string>
    <string name="quadrado14">2x5</string>
    <string name="quadrado15">2x6</string>
    <string name="quadrado16">2x7</string>
    <string name="quadrado20">3x1</string>
    <string name="quadrado21">3x2</string>
    <string name="quadrado22">3x3</string>
    <string name="quadrado23">3x4</string>
    <string name="quadrado24">3x5</string>
    <string name="quadrado25">3x6</string>
    <string name="quadrado26">3x7</string>
    <string name="quadrado30">4x1</string>
    <string name="quadrado31">4x2</string>
    <string name="quadrado32">4x3</string>
    <string name="quadrado33">4x4</string>
    <string name="quadrado34">4x5</string>
    <string name="quadrado35">4x6</string>
    <string name="quadrado36">4x7</string>
    <string name="quadrado40">5x1</string>
    <string name="quadrado41">5x2</string>
    <string name="quadrado42">5x3</string>
    <string name="quadrado43">5x4</string>
    <string name="quadrado44">5x5</string>
    <string name="quadrado45">5x6</string>
    <string name="quadrado46">5x7</string>
    <string name="quadrado50">6x1</string>
    <string name="quadrado51">6x2</string>
    <string name="quadrado52">6x3</string>
    <string name="quadrado53">6x4</string>
    <string name="quadrado54">6x5</string>
    <string name="quadrado55">6x6</string>
    <string name="quadrado56">6x7</string>
    <string name="quadrado60">7x1</string>
    <string name="quadrado61">7x2</string>
    <string name="quadrado62">7x3</string>
    <string name="quadrado63">7x4</string>
    <string name="quadrado64">7x5</string>
    <string name="quadrado65">7x6</string>
    <string name="quadrado66">7x7</string>
    
    <!-- Buscando Activity -->
    <string name="title_activity_buscando">Buscando</string>
    <string name="aguarde">Aguarde enquantos procuramos por um adversário para você</string>
    <string name="nao_tem_bt">Seu celular não tem bluetooth</string>
    <string name="bluetooth_desativado">Bluetooth não foi ativado, operação cancelada</string>
    <string name="erro_ao_tentar_descobrir">Erro ao tentar descobrir outros aparelhos</string>
    <string name="bluetooth_nao_descoberto">A busca pode demorar mais</string>
    
</resources>
