<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textoEscolhaPecas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/escolha_seus_guerreiros" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageSoldado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/peca_soldado_branco" />

                <TextView
                    android:id="@+id/textoSoldado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_soldado" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageMago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/peca_mago_branco" />

                <TextView
                    android:id="@+id/textoMago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_mago" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageRei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/peca_rei_branco" />

                <TextView
                    android:id="@+id/textoRei"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_rei" />

            </LinearLayout>
            
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGrupoEsquerda"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioEsquerda1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio_esquerda" />

            <RadioButton
                android:id="@+id/radioEsquerda2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_esquerda" />

            <RadioButton
                android:id="@+id/radioEsquerda3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_esquerda" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGrupoMeio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioMeio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio_meio" />

            <RadioButton
                android:id="@+id/radioMeio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_meio" />

            <RadioButton
                android:id="@+id/radioMeio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_meio" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGrupoDireita"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioDireita1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radio_direita" />

            <RadioButton
                android:id="@+id/radioDireita2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_direita" />

            <RadioButton
                android:id="@+id/radioDireita3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_direita" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>